# home-erp_2.0

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/agents/: gleb.agent.md
alembic/: env.py
alembic/versions/: 38ddffe6f04e_add_location_to_batteries.py  3a51820bd9d8_add_price_and_store_tracking.py  3ea4ba2f76cf_add_equipment_and_battery_tracking.py  4fa098c32d12_add_multi_tenancy_support.py  5c312cf2b988_add_activity_log_model.py  6fbf194ae3f8_add_recipes.py  7b4c86ab9637_initial_schema.py  c262593f1c9c_add_unit_id_to_recipe_ingredients.py  d8fc6660f9a0_add_chores.py  db452e0cadba_add_unit_conversions.py
app/: __init__.py  main.py
app/api/: router.py
app/api/routes/: auth.py  batteries.py  chores.py  equipment.py  household.py  inventory.py  locations.py  pages.py  products.py  recipes.py  shopping_list.py  units.py
app/core/: activity.py  auth.py  config.py  storage.py  units.py
app/crud/: __init__.py  activity.py  crud_chores.py  crud_equipment.py  crud_finance.py  inventory.py  location.py  product.py  recipe.py  shopping_list.py  unit.py
app/db/: base.py  session.py
app/models/: __init__.py  activity.py  auth.py  chore.py  equipment.py  location.py  product.py  recipe.py  shopping_list_item.py  stock_entry.py  unit.py
app/schemas/: __init__.py  inventory.py  location.py  product.py  recipe.py  shopping_list_item.py  unit.py
app/static/css/: app.css
app/static/js/: app.js
app/templates/: base.html  index.html  landing.html
scratch/: check_db.py
(+24 files in other folders)
